[tool.poetry]
name = "dpsa4fl-example"
version = "0.1.0"
description = ""
authors = ["Maxim Urschumzew <u.maxim@live.de>"]

[tool.poetry.dependencies]
python = "^3.9"
flwr = { path = "../flower-with-prio/", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
